--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
   }
 }
 </style>
+<script src="https://cdn.paddle.com/paddle/paddle.js"></script>
+<script type="text/javascript">
+	Paddle.Setup({ vendor: 10898 });
+</script>
 </head>
 <body>
 
@@ -73,7 +77,7 @@
     <li>10 Emails</li>
     <li>10 Domains</li>
     <li>1GB Bandwidth</li>
-    <li class="grey"><a href="#" class="button">Sign Up</a></li>
+    <li class="grey"><a href="#!" class="paddle_button" data-product="45655" data-theme="none">Buy Now!</a></li>
   </ul>
 </div>
 
