Switch on sandbox mode

--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<script src="https://cdn.paddle.com/paddle/paddle.js"></script>
+<script type="text/javascript">
+ 	Paddle.Environment.set('sandbox');
+	Paddle.Setup({ vendor: 10898 });
+</script>
 <style>
 * {
   box-sizing: border-box;
@@ -59,10 +64,6 @@
   }
 }
 </style>
-<script src="https://cdn.paddle.com/paddle/paddle.js"></script>
-<script type="text/javascript">
-	Paddle.Setup({ vendor: 10898 });
-</script>
 </head>
 <body>
 
