Add new products

--- a/index.html
+++ b/index.html
@@ -71,43 +71,42 @@
 </head>
 <body>
 
-<h1 style="text-align:center">Select your product</h1>
-<p style="text-align:center">Resize the browser window to see the effect.</p>
+<h1 style="text-align:center">Keil MDK 6</h1>
+<p style="text-align:center">Choose how you want to purchase MDK. You are seeing currency based on your location.</p>
 
 <div class="columns">
   <ul class="price">
-    <li class="header">1 Year Term</li>
-    <li class="grey">$ 9.99 / year</li>
-    <li>10GB Storage</li>
-    <li>10 Emails</li>
-    <li>10 Domains</li>
-    <li>1GB Bandwidth</li>
-    <li class="grey"><a href="#!" class="paddle_button" data-product="45655" data-theme="none">Buy Now!</a></li>
+    <li class="header">1 Year term</li>
+    <li class="grey"><span class="paddle-gross" data-product="45655">$5,000</span></li>
+    <li>&micro;Vision</li>
+    <li>VS Code Extensions</li>
+    <li>API access</li>
+    <li>Fixed term license</li>
+    <li class="grey"><a href="#!" class="paddle_button" data-product="45655" data-theme="none">Buy Now</a></li>
   </ul>
 </div>
 
 <div class="columns">
   <ul class="price">
     <li class="header" style="background-color:#00c1de">Annual subscription</li>
-    <li class="grey">$ 24.99 / year</li>
-    <li>25GB Storage</li>
-    <li>25 Emails</li>
-    <li>25 Domains</li>
-    <li>2GB Bandwidth</li>
-    <li class="grey"><a href="#" class="button">Sign Up</a></li>
+	<li class="grey"><span class="paddle-gross" data-product="45670">$200</span> / year</li>
+	<li>&micro;Vision</li>
+    <li>VS Code Extensions</li>
+    <li>API access</li>
+    <li>Automatically renews</li>
+    <li class="grey"><a href="#!" class="paddle_button" data-product="45670" data-theme="none">Buy Now</a></li>
   </ul>
 </div>
 
 <div class="columns">
   <ul class="price">
     <li class="header">Monthly subscription</li>
-    <li class="grey">$ 49.99 / year</li>
-    <li>50GB Storage</li>
-    <li>50 Emails</li>
-    <li>50 Domains</li>
-    <li>5GB Bandwidth</li>
-    <li class="grey"><a href="#" class="button">Sign Up</a></li>
-  </ul>
+    <li class="grey"><span class="paddle-gross" data-product="45671">$200</span> / month</li>
+    <li>&micro;Vision</li>
+    <li>VS Code Extensions</li>
+    <li>API access</li>
+    <li>Automatically renews</li>
+ 	<li class="grey"><a href="#!" class="paddle_button" data-product="45671" data-theme="none">Buy Now</a></li>  </ul>
 </div>
 
 </body>
